<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView_weather">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/overview">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_16">

                <TextView
                    android:id="@+id/city_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:text="Bangalore, IN"/>

                <TextView
                    android:id="@+id/updated_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/city_field"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="13sp"
                    tools:text="Last Updated : 12:03 AM"/>

                <TextView
                    android:id="@+id/current_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="70sp"
                    android:layout_below="@id/updated_field"/>

                <TextView
                    android:id="@+id/min_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    tools:text="Min: 20 C"
                    android:layout_below="@id/current_temperature"/>

                <TextView
                    android:id="@+id/max_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    tools:text="Max: 20 C"
                    android:layout_marginStart="@dimen/padding_8"
                    android:layout_marginLeft="@dimen/padding_8"
                    android:layout_toRightOf="@id/min_temperature"
                    android:layout_toEndOf="@id/min_temperature"
                    android:layout_below="@id/current_temperature"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detailed_view"
                android:layout_marginTop="@dimen/padding_8">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/details_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/details_card_title"
                        android:textStyle="bold"
                        android:padding="@dimen/padding_8"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/black"
                        android:layout_below="@id/details_view"
                        android:paddingBottom="@dimen/padding_16"
                        android:id="@+id/divider"/>

                    <TextView
                        android:id="@+id/weather_icon_detailed_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="70sp"
                        android:padding="@dimen/padding_8"
                        android:layout_below="@id/divider"/>

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/divider"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        tools:text="Humidity: 10"
                        android:gravity="center"
                        android:padding="@dimen/padding_8"
                        android:layout_toRightOf="@+id/weather_icon_detailed_view"
                        android:layout_toEndOf="@+id/weather_icon_detailed_view"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>

                    <TextView
                        android:id="@+id/uv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/humidity"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        tools:text="UV intensity: Extreme"
                        android:gravity="center"
                        android:padding="@dimen/padding_8"
                        android:layout_toRightOf="@+id/weather_icon_detailed_view"
                        android:layout_toEndOf="@+id/weather_icon_detailed_view"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:id="@+id/wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/uv"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        tools:text="Speed: 12"
                        android:gravity="center"
                        android:padding="@dimen/padding_8"
                        android:layout_toRightOf="@+id/weather_icon_detailed_view"
                        android:layout_toEndOf="@+id/weather_icon_detailed_view"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/description"
                        tools:text="Clear clouds"
                        android:padding="@dimen/padding_8"
                        android:layout_below="@id/weather_icon_detailed_view"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:id="@+id/future_forecast">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/header_forecast"
                        android:padding="@dimen/padding_8">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@+id/day"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/weather"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/min_temperature"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/max_temperature"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_weight="1" />
                    </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/next_days_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:padding="@dimen/padding_8"
        android:layout_below="@id/scrollView_weather" />

</RelativeLayout>